# list-t-text

./: .travis.yml  list-t-text.cabal
hspec/: Main.hs
